@@ -17,7 +17,7 @@
     <number>4</number>
    </property>
    <property name="margin" >
-    <number>2</number>
+    <number>4</number>
    </property>
    <item>
     <widget class="QGroupBox" name="groupBox" >
@@ -125,11 +125,22 @@
     </widget>
    </item>
    <item>
-    <widget class="QCheckBox" name="IncludeTracks" >
-     <property name="text" >
-      <string>Also download raw GPS tracks</string>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout" >
+     <item>
+      <widget class="QCheckBox" name="IncludeTracks" >
+       <property name="text" >
+        <string>Also download raw GPS tracks</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="ResolveRelations" >
+       <property name="text" >
+        <string>Resolve all relations</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox" >
