@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>449</width>
-    <height>372</height>
+    <width>436</width>
+    <height>463</height>
    </rect>
   </property>
   <property name="windowTitle" >
